<resources>
    <string name="app_name">Diary</string>

    <string name="cancel">Cancelar</string>
    <string name="error">Error</string>
    <string name="reset">Resetar</string>
    <string name="format_month_year">%s | %s</string>
    <string name="format_amount">Total do mês:\n%s</string>

    <!--<editor-folder defaultstate="Collapsed" desc="Fragments">-->
    <!--Fragment Spending-->
    <string name="fragment_spending_title">Gastos</string>
    <string name="fragment_spending_empty_list">Nenhum gasto registrado.</string>

    <!--Fragment Clients-->
    <string name="fragment_clients_register_customer">Clique aqui para registrar seu primeiro cliente</string>
    <string name="fragment_clients_new_order">Novo pedido...</string>
    <string name="fragment_clients_empty_order_list">Nenhum pedido registrado.</string>

    <!--Fragment Profile-->
    <string name="fragment_profile_info_income">Renda atual:</string>

    <!--</editor-folder>-->

    <!--<editor-folder defaultstate="Collapsed" desc="Dialogs">-->
    <!--Dialog Spending-->
    <string name="dialog_spending_title">Titulo*:</string>
    <string name="dialog_spending_title_hint">Nome do produto</string>
    <string name="dialog_spending_description">Descrição:</string>
    <string name="dialog_spending_description_hint">Comprado no</string>
    <string name="dialog_spending_price">Preço*:</string>
    <string name="dialog_spending_price_hint">R$0,00</string>
    <string name="dialog_spending_date">Data:</string>
    <string name="dialog_spending_date_hint">05/04/2009</string>
    <string name="dialog_spending_btn">Registrar</string>
    <string name="dialog_spending_btn_delete">Deletar</string>
    <string name="dialog_spending_register_success">Registrado com sucesso</string>

    <!--Dialog Customer-->
    <string name="dialog_customer_title">Lista de Clientes</string>
    <string name="dialog_customer_register">Registrar cliente</string>
    <string name="dialog_customer_edit_customer">Editar Cliente</string>
    <string name="dialog_customer_edit_save">Salvar</string>
    <string name="dialog_customer_client">Nome</string>
    <string name="dialog_customer_client_hint">Nome do Cliente</string>
    <string name="dialog_customer_name_empty">O nome do cliente não pode estar vazio!</string>
    <string name="dialog_customer_error_delete">Erro ao deletar cliente, por favor tente novamente mais tarde!</string>
    <string name="dialog_customer_delete_question">Está ação excluirá o cliente para sempre junto com seus pedidos.\nGostaria de continuar?</string>
    <string name="dialog_customer_btn_yes">Sim</string>
    <string name="dialog_customer_btn_no">Não</string>

    <!--Dialog Select Customer-->
    <string name="dialog_select_customer_btn_ok">Selecionar</string>

    <!--Dialog Order-->
    <string name="dialog_order_title">Registrar Pedido</string>

    <!--Dialog Month-->
    <string name="dialog_month_title">Selecione um mês</string>
    <string name="dialog_all_months">Sem filtro</string>
    <!--</editor-folder>-->

    <!--<editor-folder defaultstate="collapsed" desc="Activities">-->
    <!--Register Order-->
    <string name="activity_register_order_title">Título</string>
    <string name="activity_register_order_amount">R$ 0,00</string>
    <string name="activity_register_order_date">Data do pedido</string>
    <string name="activity_register_order_description">Descrição</string>
    <string name="activity_register_order">Novo Pedido!</string>
    <string name="activity_register_order_edit">Editar Pedido!</string>
    <string name="activity_register_spending">Gastos</string>
    <string name="activity_register_arrow_back">Voltar</string>
    <string name="activity_register_name_description_empty">Defina um titulo ou uma mensagem para o seu pedido</string>

    <!--User Register-->
    <string name="activity_user_register_welcome">Bem-vindo!</string>
    <string name="activity_user_register_welcome_message">Novo por aqui?</string>
    <string name="activity_user_register_why_income">Por qual môtimo?</string>
    <string name="activity_user_register_because_income">Com sua renda podemos fazer previsões mais detalhadas sobre o seu mês.</string>
    <string name="activity_user_register_insert_data">Insira seus dados para\nnós te conhecermos melhor =)</string>
    <string name="activity_user_register_name_hint">Digite seu Nome</string>
    <string name="activity_user_register_email_hint">Digite seu email</string>
    <string name="activity_user_register_age_hint">Digite sua idade</string>
    <string name="activity_user_register_income_hint">Digite sua Renda</string>
    <string name="activity_user_register_btn_continue">Continuar</string>
    <string name="activity_user_register_btn_finish">Finalizar</string>
    <string name="activity_user_register_fill_all_fields">Preencha todos os campos para continuar</string>
    <string name="activity_user_register_age_0">Sua Idade tem que ser maior que 0</string>
    <string name="activity_user_register_income_0">Sua Renda tem que ser maior que 0</string>
    <string name="activity_user_register_error">Verifique os dados e tente novamente</string>

    <!--SingIn-->
    <string name="activity_sing_in_welcome">Vincular email…</string>
    <string name="activity_sing_in_welcome_message">Olá %s!</string>
    <string name="activity_sing_in_welcome_login">Bem-vindo(a)</string>
    <string name="activity_sing_in_welcome_insert_login">Faça login para carregar todos os seus dados.</string>
    <string name="activity_sing_in_welcome_insert">Vamos sincronicar seus dados locais com seu email?</string>
    <string name="activity_sing_in_welcome_insert_2">A principal vantagem é que você não irá perder seus dados caso exclua o aplicativo sem querer!!</string>
    <string name="activity_sing_in_hint_email">Digite seu email</string>
    <string name="activity_sing_in_hint_password">Digite uma senha*</string>
    <string name="activity_sing_in_password">*Essa será a senha utilizada para entrar no aplicativo</string>
    <string name="activity_sing_in_btn">Sincronizar</string>
    <string name="activity_sing_in_btn_login">Entrar</string>

    <!--ProfileActivity-->
    <string name="activity_profile_spend_radiobutton">Novo Gasto</string>
    <string name="activity_profile_customer_radiobutton">Novo Pedido</string>

    <!--Splash-->
    <string name="activity_splash_retry">Tentar novamente</string>

    <!--IncomeDayActivity-->
    <string name="activity_income_day_title">Rendimento diário</string>
    <string name="activity_income_day_no_search">Sem filtro</string>
    <string name="activity_income_day_search_label_until">até</string>
    <string name="activity_income_day_search_clear">Clique para limpar o filtro.</string>

    <!--</editor-folder>-->

    <!--<editor-folder defaultstate="Collapsed" desc="Menus">-->
    <!--Customer Options Menu-->
    <string name="customer_options_change_customer">Selecionar outro cliente</string>
    <string name="customer_options_more_options">Mais opções</string>
    <string name="customer_options_time_line">Time line</string>
    <string name="customer_options_settings">Configurações</string>
    <string name="customer_options_add_customer">Novo Cliente</string>
    <string name="customer_options_delete">Deleta os Items Selecionados</string>

    <!--Add Menu-->
    <string name="spending_add_option">Adicionar</string>
    <string name="spending_delete_option">Deletar</string>

    <!--Ok Menu-->
    <string name="ok_option">OK</string>

    <!--</editor-folder>-->

    <!--<editor-folder defaultstate="Collapsed" desc="Holders">-->

    <!--GraphViewHolder-->
    <string name="graph_view_holder_info">Gráfico do mês atual: (%s)</string>

    <!--IncomeViewHolder-->
    <string name="income_view_holder_info">Renda mensal</string>

    <!--DailyIncomeViewHolder-->
    <string name="daily_income_view_holder_info">Total do dia</string>

    <!--LinkedEmailViewHolder-->
    <string name="linked_email_view_holder_email_null">Clique aqui para vincular seu email!</string>

    <!--ExpectedIncomeViewHolder-->
    <string name="expected_income_view_holder_actual_income">Atual:</string>
    <string name="expected_income_view_holder_expected_income">Previsto:</string>
    <string name="expected_income_view_holder_expected_income_empty">Nenhum rendimento previsto.\nClique aqui para adicionar.</string>
    <string name="expected_income_view_holder_income">Rendimentos</string>

    <!--FlowViewHolder-->
    <string name="flow_view_holder_spend">Gastos</string>
    <string name="flow_view_holder_customer">Clientes</string>
    <string name="flow_view_holder_no_selected_customer">Nenhum cliente selecionado</string>

    <!--</editor-folder>-->

    <!--Month-->
    <string name="month_january">Janeiro</string>
    <string name="month_february">Fevereiro</string>
    <string name="month_march">Março</string>
    <string name="month_april">Abril</string>
    <string name="month_may">Maio</string>
    <string name="month_june">Junho</string>
    <string name="month_july">Julho</string>
    <string name="month_august">Agosto</string>
    <string name="month_september">Setembro</string>
    <string name="month_october">Outubro</string>
    <string name="month_november">Novembro</string>
    <string name="month_december">Dezembro</string>
    <string name="month_empty">Sem filtro</string>

</resources>
