<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/rootOrder"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/shape_row_order"
        android:foreground="?attr/selectableItemBackground"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/info"
            style="@style/RobotoBoldWhite"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/expected_income_view_holder_income"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvExpectedIncomeInfo"
            style="@style/RobotoWhite"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:alpha="0.7"
            android:text="@string/expected_income_view_holder_expected_income_empty"
            android:textAlignment="center"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/info" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clIncome"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/info"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/incomeActual"
                style="@style/RobotoWhite"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/expected_income_view_holder_actual_income"
                android:textAlignment="textEnd"
                app:layout_constraintEnd_toStartOf="@id/tvActualIncome"
                app:layout_constraintHorizontal_bias="1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvActualIncome"
                style="@style/RobotoBoldShinyShamrock"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="R$ 1.800,00" />

            <TextView
                android:id="@+id/expectedIncomeInfo"
                style="@style/RobotoWhite"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:alpha="0.7"
                android:text="@string/expected_income_view_holder_expected_income"
                android:textAlignment="textEnd"
                android:textSize="14sp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/tvExpectedIncome"
                app:layout_constraintHorizontal_bias="1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvActualIncome" />

            <TextView
                android:id="@+id/tvExpectedIncome"
                style="@style/RobotoBoldShinyShamrock"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:alpha="0.7"
                android:textAlignment="textEnd"
                android:textSize="14sp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvActualIncome"
                tools:text="R$ 1.800,00" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>